[package]
name = "cup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive", "env"] }
dialoguer = { version = "0.11.0", features = ["completion", "history", "fuzzy-matcher", "fuzzy-select"] }
toml ="*"
serde = { version = "*", features = ["derive"] }
anyhow = "*"
